--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
   </dependencies>
   <build>
     <finalName>${artifactId}-${version}</finalName>
+    <directory>target/${artifactId}-${version}.dir</directory>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
