--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
       <plugin>
 	<artifactId>maven-assembly-plugin</artifactId>
 	<configuration>
+	  <ignoreDirFormatExtensions>false</ignoreDirFormatExtensions>
 	  <descriptors>
 	    <descriptor>assembly.xml</descriptor>
 	  </descriptors>
