--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>io.s4</groupId>
-  <artifactId>s4_core</artifactId>
+
+  <parent>
+    <groupId>io.s4</groupId>
+    <artifactId>s4.parent</artifactId>
+    <version>0.2.1.0</version>
+  </parent>
+
+  <artifactId>s4.core</artifactId>
   <packaging>jar</packaging>
-  <version>0.2.1.0</version>
-  <name>s4_core</name>
-  <url>http://maven.apache.org</url>
+  <name>${project.artifactId}</name>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/s4/core/issues/</url>
+  </issueManagement>
+
+  <scm>
+    <connection>scm:git:https://github.com/s4/core.git</connection>
+  </scm>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.bcel</groupId>
@@ -47,29 +61,6 @@
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.15</version>
-      <exclusions>
-	<exclusion>
-	  <groupId>javax.mail</groupId>
-	  <artifactId>mail</artifactId>
-	</exclusion>
-	<exclusion>
-	  <groupId>javax.jms</groupId>
-	  <artifactId>jms</artifactId>
-	</exclusion>
-	<exclusion>
-	  <groupId>com.sun.jdmk</groupId>
-	  <artifactId>jmxtools</artifactId>
-	</exclusion>
-	<exclusion>
-	  <groupId>com.sun.jmx</groupId>
-	  <artifactId>jmxri</artifactId>
-	</exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>commons-jexl</groupId>
@@ -125,31 +116,23 @@
     </resources>
     <plugins>
       <plugin>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<version>2.0.1</version>
-	<configuration>
-	  <source>1.6</source>
-	  <target>1.6</target>
-	</configuration>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <ignoreDirFormatExtensions>false</ignoreDirFormatExtensions>
+          <descriptors>
+            <descriptor>assembly.xml</descriptor>
+          </descriptors>
+        </configuration>
       </plugin>
       <plugin>
-	<artifactId>maven-assembly-plugin</artifactId>
-	<configuration>
-	  <ignoreDirFormatExtensions>false</ignoreDirFormatExtensions>
-	  <descriptors>
-	    <descriptor>assembly.xml</descriptor>
-	  </descriptors>
-	</configuration>
-      </plugin>
-      <plugin>
-	<groupId>org.codehaus.mojo</groupId>
-	<artifactId>findbugs-maven-plugin</artifactId>
-	<version>2.0</version>
-	<configuration>
-	  <findbugsXmlOutput>true</findbugsXmlOutput>
-	  <xmlOutput>true</xmlOutput>
-	  <threshold>High</threshold>
-	</configuration>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.0</version>
+        <configuration>
+          <findbugsXmlOutput>true</findbugsXmlOutput>
+          <xmlOutput>true</xmlOutput>
+          <threshold>High</threshold>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -161,15 +144,15 @@
             <artifactId>doxia-module-confluence</artifactId>
             <version>1.1.3</version>
           </dependency>
-	  <dependency>
-	    <groupId>org.apache.maven.doxia</groupId>
-	    <artifactId>doxia-module-twiki</artifactId>
+          <dependency>
+            <groupId>org.apache.maven.doxia</groupId>
+            <artifactId>doxia-module-twiki</artifactId>
             <version>1.1.3</version>
           </dependency>
-	</dependencies>	
-	<configuration>
-	  <siteDirectory>target/generated-site</siteDirectory>
-	</configuration>
+        </dependencies>
+        <configuration>
+          <siteDirectory>target/generated-site</siteDirectory>
+        </configuration>
       </plugin>
     </plugins>
   </build>
