--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+       <groupId>junit</groupId>
+       <artifactId>junit</artifactId>
+       <version>4.4</version>
+       <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${artifactId}-${version}</finalName>
