Explicitly adding repo1.maven.org repository.
Speeds up build by not fetching artifacts from google code repository.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
   <url>http://maven.apache.org</url>
   <repositories>
     <repository>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>Maven Repository Switchboard</name>
+    </repository>
+    <repository>
       <id>gson</id>
       <url>http://google-gson.googlecode.com/svn/mavenrepo</url>
       <snapshots>
